AssingnmentTesting.txt
$ git commit -am "Try to commit Without add"
On branch main
Your branch is up to date with 'origin/main'.

Untracked files:
  (use "git add <file>..." to include in what will be committed)
        Total_And_Avg.java

nothing added to commit but untracked files present (use "git add" to track)


Try qw ==> Not an editor command : qw

Try !w ==>
[No write since last change]
/usr/bin/bash: line 1: w: command not found

shell returned 127

Press ENTER or type command to continue

// Error in using Scanner without import java.util.Scanner;

$ javac HelloWorldTest.java
HelloWorldTest.java:6: error: cannot find symbol
        Scanner s = new Scanner(system.in);
        ^
  symbol:   class Scanner
  location: class HelloWorldTest
HelloWorldTest.java:6: error: cannot find symbol
        Scanner s = new Scanner(system.in);
                        ^
  symbol:   class Scanner
  location: class HelloWorldTest
HelloWorldTest.java:6: error: cannot find symbol
        Scanner s = new Scanner(system.in);
                                ^
  symbol:   variable system
  location: class HelloWorldTest
3 errors

